Fix: Modal/Popup flickering

--- a/src/BlazorElectron/wwwroot/css/site.css
+++ b/src/BlazorElectron/wwwroot/css/site.css
@@ -170,7 +170,6 @@ body {
 
 /* Popup-Fenster */
 .modal {
-    display: block;
     font-family: Arial;
     background-color: rgba(10,10,10,.8);
 }
